--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,6 @@
 version: '3.8'
 
 services:
-  postgres:
-    image: postgres:15-alpine
-    container_name: school_postgres
-    environment:
-      POSTGRES_DB: school_db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
   backend:
     build:
       context: ./backend
@@ -25,32 +8,31 @@ services:
     container_name: school_backend
     environment:
       PORT: 5000
-      DB_HOST: postgres
+      DB_HOST: fdbfaab122c0842cf1db7eec.twc1.net
       DB_PORT: 5432
-      DB_NAME: school_db
-      DB_USER: postgres
-      DB_PASSWORD: postgres
-      JWT_SECRET: your-super-secret-jwt-key-change-in-production
-      JWT_EXPIRE: 7d
+      DB_NAME: db_Jomiweb
+      DB_USER: gen_user
+      DB_PASSWORD: Ac128Sp3
       NODE_ENV: production
-      UPLOAD_PATH: ./uploads
+      JWT_SECRET: ${JWT_SECRET:-change-me}
+      JWT_EXPIRE: 7d
+      PGSSLROOTCERT: /app/certs/root.crt
+      UPLOAD_PATH: /app/uploads
     volumes:
       - ./backend/uploads:/app/uploads
-      - ./backend/src:/app/src
     ports:
       - "5000:5000"
-    depends_on:
-      postgres:
-        condition: service_healthy
     command: sh -c "sleep 5 && npm run migrate && npm start"
 
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        VITE_API_URL: /api
     container_name: school_frontend
     ports:
-      - "3000:80"
+      - "8834:80"
     depends_on:
       - backend
 
@@ -58,12 +40,11 @@ services:
     build:
       context: ./admin
       dockerfile: Dockerfile
+      args:
+        VITE_API_URL: /api
     container_name: school_admin
     ports:
-      - "3001:80"
+      - "8833:80"
     depends_on:
       - backend
-
-volumes:
-  postgres_data:
 
