--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend:
     build:
@@ -23,6 +21,8 @@ services:
     ports:
       - "5000:5000"
     command: sh -c "sleep 5 && npm run migrate && npm start"
+    networks:
+      - school_network
 
   frontend:
     build:
@@ -31,10 +31,14 @@ services:
       args:
         VITE_API_URL: /api
     container_name: school_frontend
+    environment:
+      BACKEND_HOST: backend:5000
     ports:
       - "8834:80"
     depends_on:
       - backend
+    networks:
+      - school_network
 
   admin:
     build:
@@ -43,8 +47,16 @@ services:
       args:
         VITE_API_URL: /api
     container_name: school_admin
+    environment:
+      BACKEND_HOST: backend:5000
     ports:
       - "8833:80"
     depends_on:
       - backend
+    networks:
+      - school_network
+
+networks:
+  school_network:
+    driver: bridge
 
