--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -16,5 +16,11 @@ server {
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
+
+    location /uploads {
+        proxy_pass http://${BACKEND_HOST};
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+    }
 }
 
