--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name jomi.edu.tj www.jomi.edu.tj;
+
     root /usr/share/nginx/html;
     index index.html;
 
@@ -8,4 +9,3 @@ server {
         try_files $uri $uri/ /index.html;
     }
 }
-
