--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,12 +2,10 @@ server {
     listen 80;
     server_name jomi.edu.tj www.jomi.edu.tj;
 
+    root /usr/share/nginx/html;
+    index index.html;
+
     location / {
-        proxy_pass http://localhost:8834;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        try_files $uri $uri/ /index.html;
     }
 }
