--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,6 +5,21 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Proper MIME types for video files
+    location ~* \.(mp4|webm|ogg)$ {
+        add_header Cache-Control "public, max-age=31536000";
+        access_log off;
+        expires 1y;
+        add_header Access-Control-Allow-Origin *;
+    }
+
+    # Static assets
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        access_log off;
+    }
+
     location / {
         try_files $uri $uri/ /index.html;
     }
