--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,26 +1,20 @@
 server {
     listen 80;
-    server_name jomi.edu.tj www.jomi.edu.tj;
-
+    server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
-
-    # Proper MIME types for video files
-    location ~* \.(mp4|webm|ogg)$ {
-        add_header Cache-Control "public, max-age=31536000";
-        access_log off;
-        expires 1y;
-        add_header Access-Control-Allow-Origin *;
-    }
-
-    # Static assets
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-        access_log off;
-    }
 
     location / {
         try_files $uri $uri/ /index.html;
     }
+
+    location /api {
+        proxy_pass http://${BACKEND_HOST};
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
 }
+
