--- a/frontend/nginx-ssl.conf
+++ b/frontend/nginx-ssl.conf
@@ -1,11 +1,23 @@
-# HTTP server
+# HTTPS server configuration (included only if SSL certificates exist)
 server {
-    listen 80;
+    listen 443 ssl http2;
     server_name _;
     root /usr/share/nginx/html;
     index index.html;
 
+    # SSL certificate configuration
+    ssl_certificate /etc/nginx/ssl/certificate.crt;
+    ssl_certificate_key /etc/nginx/ssl/private.key;
+
+    # SSL security settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+
     # Security headers
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
